crpppc171 -> spcpc171, marte launcher command and brief FAT howto

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
@@ -29,7 +29,7 @@
 
 +ShotManager = {
  Class = SPCShotManager
- Server = crpppc171.epfl.ch
+ Server = spcpc171.epfl.ch
  Tree = martetest
  Shot = 1
  Statusnode = ST.CH20
@@ -306,7 +306,7 @@ $RTApp = {
         	// this is necessary because we need a late opening to have simulink buses configured
         	// the shotno is the parameter of the opening message
         	//PulseNumber = -2
-        	PulseNumber = 10
+        	PulseNumber = -1
           	
         	EventName = "updatejScope"
         	TimeRefresh = 5
