Thomson cfg file with 4 ADCs storage

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
@@ -13,7 +13,7 @@
  CPUs allocation (spcpc373 layout):
  1 0x01 System (not isolated)
  2 0X02 System (not isolated)
- 3 0x04 System (not isolated) + MDSWriter1
+ 3 0x04 MDSWriter1
  4 0x08 ADC polling + RT Thread 1
  5 
  6
@@ -212,7 +212,11 @@ $RTApp = {
             Counter      					= { DataSource = DDB1 Type = int32 NumberOfElements = 4 }                
             Time         					= { DataSource = DDB1 Type = int32 Default = 0 }      
             ADCuscounter 					= { DataSource = DDB1 Type = uint32 NumberOfElements = 4 }
-            realadc      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}} }   
+            adc1      					    = { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
+            adc193      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
+            adc385      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
+            adc577      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{576,576}} Alias = realadc }   
+         
          
          	Thread1_CycleTime    			= { DataSource = DDB1 Type = uint32 }
 	        ADCBroker_Time    				= { DataSource = DDB1 Type = uint32 NumberOfElements = 3 } 	        	       	        
@@ -222,7 +226,10 @@ $RTApp = {
             Counter      					= { DataSource = MDSWriter1 Type = int32 NumberOfElements = 4 }                
             Time         					= { DataSource = MDSWriter1 Type = int32 Default = 0 }      
             ADCuscounter 					= { DataSource = MDSWriter1 Type = uint32 NumberOfElements = 4 }
-            realadc      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
+            adc1      					    = { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
+            adc193      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
+            adc385      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
+            adc577      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
 
           	Thread1_CycleTime    			= { DataSource = MDSWriter1 Type = uint32 Default = 0 }
 	      	ADCBroker_Time    				= { DataSource = MDSWriter1 Type = uint32 NumberOfElements = 3 } 	        	       	        
@@ -243,7 +250,7 @@ $RTApp = {
 		    Counter 	 = 	{ DataSource = LoggerDataSource Type = int32 NumberOfElements = 4 }
 		    Time    	 = 	{ DataSource = LoggerDataSource Type = int32 }
             ADCuscounter =  { DataSource = LoggerDataSource Type = uint32 NumberOfElements = 4 }
-            realadc      =  { DataSource = LoggerDataSource Type = int16 NumberOfElements = 1  }   
+            adc1      =  { DataSource = LoggerDataSource Type = int16 NumberOfElements = 1  }   
 		 }
 		} 
 		
@@ -261,7 +268,8 @@ $RTApp = {
 			ExecutionMode = RealTimeThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.
 		    //ExecutionMode = IndependentThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.			
 			CPUMask = 0x04 //Optional and only relevant if ExecutionMode=IndependentThread
-     		Cycles = 1000
+     		//Cycles = 1000
+     		Cycles = 440
      		StartTimeUsec = 0
      		//StartTimeUsec = 0
      		// Frequency = 50000
@@ -328,8 +336,10 @@ $RTApp = {
 				ADCuscounter 				= { NodeName = "ST.CH12" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 4 SamplePhase = 0 } 
 
 //				realadc      				= { NodeName = "AI.CH_%03d" 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 768 SamplePhase = 0 Indexed = 1 } // Plain indexed entry (no multidimensional signal supported!)    	
-				realadc      				= { NodeName = "AI.CH001" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
-
+				adc1      				    = { NodeName = "AI.CH001" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc193      				= { NodeName = "AI.CH193" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc385      				= { NodeName = "AI.CH385" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc577      				= { NodeName = "AI.CH577" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
         	}
         	+TreeFlushedMsg = { Class = Message Destination = ShotManager Function = TreeFlushed Mode = ExpectsReply }
         }                      
