Thomson FAT cfg with 5 channels for spectro test

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
@@ -213,10 +213,10 @@ $RTApp = {
             Time         					= { DataSource = DDB1 Type = int32 Default = 0 }      
             ADCuscounter 					= { DataSource = DDB1 Type = uint32 NumberOfElements = 4 }
             adc1      					    = { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
+			adc2							= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{1,1}}     Alias = realadc }   
             adc193      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
             adc385      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
             adc577      					= { DataSource = DDB1 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{576,576}} Alias = realadc }   
-         
          
          	Thread1_CycleTime    			= { DataSource = DDB1 Type = uint32 }
 	        ADCBroker_Time    				= { DataSource = DDB1 Type = uint32 NumberOfElements = 3 } 	        	       	        
@@ -227,6 +227,7 @@ $RTApp = {
             Time         					= { DataSource = MDSWriter1 Type = int32 Default = 0 }      
             ADCuscounter 					= { DataSource = MDSWriter1 Type = uint32 NumberOfElements = 4 }
             adc1      					    = { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
+            adc2      					    = { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }               
             adc193      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
             adc385      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
             adc577      					= { DataSource = MDSWriter1 Type = int16 NumberOfElements = 1 NumberOfDimensions = 1 }   
@@ -336,10 +337,20 @@ $RTApp = {
 				ADCuscounter 				= { NodeName = "ST.CH12" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 4 SamplePhase = 0 } 
 
 //				realadc      				= { NodeName = "AI.CH_%03d" 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 768 SamplePhase = 0 Indexed = 1 } // Plain indexed entry (no multidimensional signal supported!)    	
+// physical ADC order 
+/*
 				adc1      				    = { NodeName = "AI.CH001" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc2      				    = { NodeName = "AI.CH002" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
 				adc193      				= { NodeName = "AI.CH193" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
 				adc385      				= { NodeName = "AI.CH385" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
 				adc577      				= { NodeName = "AI.CH577" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+*/
+// logical spectro order
+				adc1      				    = { NodeName = "AI.CH001" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc2      				    = { NodeName = "AI.CH005" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc193      				= { NodeName = "AI.CH002" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc385      				= { NodeName = "AI.CH003" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
+				adc577      				= { NodeName = "AI.CH004" 	     Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } // Plain indexed entry (no multidimensional signal supported!)    	
         	}
         	+TreeFlushedMsg = { Class = Message Destination = ShotManager Function = TreeFlushed Mode = ExpectsReply }
         }                      
