fully working HOST based MARTE2 controlled Thomson shot
- HIL test with Beckhoff 1 spectrometer signal generator
- no RT processing, only acqusition

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-FAT.cfg
@@ -4,13 +4,15 @@
  TCV
  CGalperti 17.07.20
 
- - 1 thread, AFHBA404 timing, transient auto termination
- - ADC control scripts DISABLED
+ - ADC setup script inserted into ShotManager (InitScript), 
+ - ADC abort (transient stop) inserted as exiyt and abort script into ShotManager
+ - 1 thread, AFHBA404 timing, transient auto termination on #samples based or manual termination on RUNCOMPLETE message to state machine
+ - ADC control scripts ENABLED
  - state machine
- - TCP server for advancing state machine, ShotManager for sending status to MDS+ 
+ - TCP server for advancing state machine, ShotManager for sending status to MDS+  and calling necessary D-TACQ HAPI scripts
  - MDS+ storage of algorithm outputs and timings
  
- CPUs allocation (spcpc373 layout):
+ CPUs allocation (i9thomsonlayout):
  1 0x01 System (not isolated)
  2 0X02 System (not isolated)
  3 0x04 MDSWriter1
@@ -33,8 +35,11 @@
  Tree = martetest
  Shot = 1
  Statusnode = ST.CH20
- //AbortScript = "/root/scd/commands/abort-ADC" 
- // The parameter param1 is the shotnumber to be opened 
+ InitScript = "/root/scd/commands/llc-run-thomson-setup" // script called upon entering init (for TS sets up SOD ADC systems, 
+ ExitScript = "/root/scd/commands/llc-run-thomson-abort" // script called upon exiting (for TS aborts the transient acquisition on ADCs, llc-run-thomson-abort, same also for AbortScript in this case)
+ AbortScript = "/root/scd/commands/llc-run-thomson-abort" 
+
+// The parameter param1 is the shotnumber to be opened 
  //+OpenTreeMsg1 = { Class = Message Destination = RTApp.Data.MDSWriter1 Function = OpenTree Mode = ExpectsReply +Parameters = { Class = ConfigurationDatabase param1 = 0 } } 
  //+OpenTreeMsg2 = { Class = Message Destination = RTApp.Data.MDSWriter2 Function = OpenTree Mode = ExpectsReply +Parameters = { Class = ConfigurationDatabase param1 = 0 } }
 }
@@ -86,6 +91,8 @@
    NextState = "ENDRUN"
    NextStateError = "ERROR"
    Timeout = 0
+   // We stop LLC because RUNCOMPLETE could come before shot termination (# samples not known a priori in Thomson case)
+   +StopLLCMsg					   = { Class = Message Destination = RTApp.Data.ADCSystem  Function = StopLLC Mode = ExpectsReply }
    +StopCurrentStateExecutionMsg = { Class = Message Destination = RTApp     			Function = StopCurrentStateExecution Mode = ExpectsReply }
    +MdsFlushSegmentsMsg1         = { Class = Message Destination = RTApp.Data.MDSWriter1 Function = FlushSegments Mode = ExpectsReply }
    //+MdsFlushSegmentsMsg2         = { Class = Message Destination = RTApp.Data.MDSWriter2 Function = FlushSegments Mode = ExpectsReply }
@@ -269,8 +276,8 @@ $RTApp = {
 			ExecutionMode = RealTimeThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.
 		    //ExecutionMode = IndependentThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.			
 			CPUMask = 0x04 //Optional and only relevant if ExecutionMode=IndependentThread
-     		//Cycles = 1000
-     		Cycles = 440
+     		Cycles = 1000
+     		//Cycles = 440
      		StartTimeUsec = 0
      		//StartTimeUsec = 0
      		// Frequency = 50000
@@ -279,8 +286,10 @@ $RTApp = {
      		// CAUTION: in reprocessing the soft-trigger comes too early, for now
      		// arming must be done externally w.r.t. MARTe and the following line commented out
      		// CAUTION: the number of transient samples (samples after which the ADC goes back in idle state) is set in this script
-     		//RunScript = "/root/scd/commands/arm-ADC" 
-     		//EndrunScript = "/root/scd/commands/checkstop-ADC"
+     		
+		// TODO: separate setup and arm, setup to be executed at MARTe statrup:
+		RunScript = "/root/scd/commands/llc-run-thomson-arm" 
+     		EndrunScript = "/root/scd/commands/llc-run-thomson-abort"
      		Signals = {
          		Counter = { // the sample (event in this case) counters from each ADC system
              		Type = int32
