Ready to test RT TS computation
- RT TS Simulink read in via SimulinkWrapperTester.cfg
- RTThomson-2threads.cfg is the twin threads (ACQ + PROC)
to be tested for RT thomson tests

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
@@ -15,9 +15,9 @@
  CPUs allocation (i9thomsonlayout):
  1 0x01 System (not isolated)
  2 0X02 System (not isolated)
- 3 0x04 MDSWriter1
+ 3 0x04 MDSWriter1, MDSWriter2
  4 0x08 ADC polling + RT Thread 1
- 5 
+ 5 0x10 RT thomson computation thread
  6
  7
  8
@@ -192,7 +192,7 @@ $RTApp = {
 				triggerforMDS    = { DataSource = DDB1 Type = uint8       }
         	}
         }     
-		+TimingSignalsBroker1 = {
+        +TimingSignalsBroker1 = {
          Class = IOGAM
          InputSignals = { 
          	Thread1_CycleTime    			= { DataSource = Timings Type = uint32 Alias = Run.Thread1_CycleTime }
@@ -209,11 +209,106 @@ $RTApp = {
 	        StorageBroker1_Time        		= { DataSource = DDB1 Type = uint32 NumberOfElements = 3 }
          }                                                  
         }                                                   
-			
+        +T1TSynch = {
+            Class = IOGAM
+            InputSignals = {
+                Counter      = {                   DataSource = DDB1  Type = int32 NumberOfElements = 4 }                
+                realtime     = {                   DataSource = DDB1  Type = float32 Default = 0 }      
+                ADCuscounter = {                   DataSource = DDB1  Type = uint32 NumberOfElements = 4 }
+                realadc      = {                   DataSource = DDB1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }   
+            }
+            OutputSignals = {
+                Counter      = {                   DataSource = RTThreadSynch1  Type = int32 NumberOfElements = 4 }                
+                realtime     = {                   DataSource = RTThreadSynch1  Type = float32 Default = 0 }      
+                ADCuscounter = {                   DataSource = RTThreadSynch1  Type = uint32 NumberOfElements = 4 }
+                realadc      = {                   DataSource = RTThreadSynch1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }   
+            }
+        } 
+	
         /********************************************************/
-        /* MDS STORAGE THREAD                                   */
+        /* THREAD2                                              */
+        /********************************************************/                    
+        +T1T2Com = {
+            Class = IOGAM
+            InputSignals = {
+                Counter      = {                   DataSource = RTThreadSynch1  Type = int32 NumberOfElements = 4 }                
+                realtime     = {                   DataSource = RTThreadSynch1  Type = float32 Default = 0 }      
+                ADCuscounter = {                   DataSource = RTThreadSynch1  Type = uint32 NumberOfElements = 4 }
+                realadc      = {                   DataSource = RTThreadSynch1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }   
+            }
+            OutputSignals = {
+                Counter      = {                   DataSource = DDB2  Type = int32 NumberOfElements = 4 }                
+                realtime     = {                   DataSource = DDB2  Type = float32 Default = 0 }      
+                ADCuscounter = {                   DataSource = DDB2  Type = uint32 NumberOfElements = 4 }
+                realadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }               
+            }      
+        }	
+        +Constants = {
+            Class = ConstantGAM
+            OutputSignals = {
+				it_dummy 	= { DataSource = DDB2 Type = int32  NumberOfElements = 1   NumberOfDimensions=1 }
+				time_dummy 	= { DataSource = DDB2 Type = float32  NumberOfElements = 1   NumberOfDimensions=1 }
+				data_dummy	= { DataSource = DDB2 Type = int16  NumberOfElements = 528   NumberOfDimensions=1 }				
+            }
+        }
+        +SpectroRouter = {
+            Class = IOGAM
+            InputSignals = {
+                adc1      					    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
+                adc2							= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{1,1}}     Alias = realadc }   
+                adc193      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
+                adc385      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
+                adc577      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{576,576}} Alias = realadc }   
+                data_dummy	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{4,527}} }	
+
+            }
+            OutputSignals = {
+                routedadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }
+            }
+        }
+        +GAMSimulink2 = {
+ 			Class = SimulinkWrapperGAM
+			Library = "/root/TS_RT_step.so"
+			SymbolPrefix = "TS_RT_step"
+
+			Verbosity = 2
+			TunParSourceGAM = MDSParameters
+			SkipNotOkTunParams = 1
+			InputSignals = {		
+				it		    = { DataSource = DDB2 Type = int32  	NumberOfElements = 4 Ranges={{0,0}} NumberOfDimensions=1 Alias = Counter }
+				time		= { DataSource = DDB2 Type = float32    NumberOfElements = 1                NumberOfDimensions=1 Alias = realtime }
+				data		= { DataSource = DDB2 Type = int16  	NumberOfElements = 528              NumberOfDimensions=1 }				
+ 			}
+ 			OutputSignals = { 
+				testep	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				testeperr	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				nestep	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				nesteperr	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }				
+ 			}
+			//+SimulinkReadyMsg = { Class = Message Destination = RTApp.Data.MDSWriter1 Function = SetupBusSignals Mode = ExpectsReply +Parameters = { Class = ConfigurationDatabase param1 = RTApp.Functions.GAMSimulink1 } }			
+	}
+	+TimingSignalsBroker2 = {
+         Class = IOGAM
+         InputSignals = { 
+         	Thread2_CycleTime    			= { DataSource = Timings Type = uint32 Alias = Run.Thread2_CycleTime }
+	        GAMSimulink2_ReadTime    		= { DataSource = Timings Type = uint32 Default = 0 } 	        
+	        GAMSimulink2_ExecTime    		= { DataSource = Timings Type = uint32 Default = 0 } 
+	        GAMSimulink2_WriteTime    		= { DataSource = Timings Type = uint32 Default = 0 }    
+	        StorageBroker2_ReadTime        	= { DataSource = Timings Type = uint32 Default = 0 } 	       
+	        StorageBroker2_ExecTime        	= { DataSource = Timings Type = uint32 Default = 0 } 
+	        StorageBroker2_WriteTime       	= { DataSource = Timings Type = uint32 Default = 0 } 
+         }
+         OutputSignals = { 
+         	Thread2_CycleTime    			= { DataSource = DDB2 Type = uint32 Default = 0 }     
+	        GAMSimulink2_Time    			= { DataSource = DDB2 Type = uint32 NumberOfElements = 3 } 	        
+	        StorageBroker2_Time        		= { DataSource = DDB2 Type = uint32 NumberOfElements = 3 }
+         }                                                  
+        }                                                   
+	
+        /********************************************************/
+        /* MDS STORAGE THREADS                                   */
         /********************************************************/      			
-		+StorageBroker1 = {
+	+StorageBroker1 = {
 		 Class = IOGAM
 		 InputSignals = {	           	
             Counter      					= { DataSource = DDB1 Type = int32 NumberOfElements = 4 }                
@@ -244,6 +339,35 @@ $RTApp = {
 	      	StorageBroker1_Time        		= { DataSource = MDSWriter1 Type = uint32 NumberOfElements = 3 }        
 		 }
 		}
+	+StorageBroker2 = {
+		 Class = IOGAM
+		 InputSignals = {	           	
+            Counter      					= { DataSource = DDB2 Type = int32 NumberOfElements = 4 }                
+            realtime         			    = { DataSource = DDB2 Type = float32 Default = 0 }      
+         
+            testep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            testeperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            nestep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            nesteperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }				
+         
+         	Thread2_CycleTime    			= { DataSource = DDB2 Type = uint32 Default = 0 }     
+	        GAMSimulink2_Time    			= { DataSource = DDB2 Type = uint32 NumberOfElements = 3 } 	        
+	        StorageBroker2_Time        		= { DataSource = DDB2 Type = uint32 NumberOfElements = 3 }
+		 }
+		 OutputSignals = {
+            Counter      					= { DataSource = MDSWriter2 Type = int32 NumberOfElements = 4 }                
+            realtime         				= { DataSource = MDSWriter2 Type = float32 Default = 0 }      
+
+            testep	                        = { DataSource = MDSWriter2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            testeperr	                    = { DataSource = MDSWriter2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            nestep	                        = { DataSource = MDSWriter2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            nesteperr	                    = { DataSource = MDSWriter2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }				            
+            
+            Thread2_CycleTime    			= { DataSource = MDSWriter2 Type = uint32 Default = 0 }     
+	        GAMSimulink2_Time    			= { DataSource = MDSWriter2 Type = uint32 NumberOfElements = 3 } 	        
+	        StorageBroker2_Time        		= { DataSource = MDSWriter2 Type = uint32 NumberOfElements = 3 }
+		 }
+		}
 		
 		+LoggerBroker = {
 		 Class = IOGAM
@@ -267,7 +391,8 @@ $RTApp = {
         Class = ReferenceContainer
         DefaultDataSource = DDB1        
         +DDB1 				= { Class = GAMDataSource }
-        +LoggerDataSource 	= {	Class = LoggerDataSource }  
+        +DDB2 				= { Class = GAMDataSource }
+        +LoggerDataSource 	= { Class = LoggerDataSource }  
         +Timings 			= { Class = TimingDataSource }       
                  
         +ADCSystem = {
@@ -310,6 +435,11 @@ $RTApp = {
          	}
          	+TermMessage1 = { Class=Message Destination=StateMachine Function=RUNCOMPLETE }
      	}    
+        +RTThreadSynch1 = {
+            Class = RealTimeThreadSynchronisation
+            Timeout = 1000 //Timeout in ms to wait for the thread to cycle.
+        	//Timeout = 0
+        } 
         +MDSWriter1 = {
         	Class = MDSWriter
 			NumberOfBuffers = 100000
@@ -363,7 +493,50 @@ $RTApp = {
         	}
         	+TreeFlushedMsg = { Class = Message Destination = ShotManager Function = TreeFlushed Mode = ExpectsReply }
         }                      
+    
+
+        +MDSWriter2 = {
+        	Class = MDSWriter
+			NumberOfBuffers = 100000
+        	CPUMask = 0x04
+        	StackSize = 10000000
+        	TreeName = "martetest"
+        	//StoreOnTrigger = 1
+        	StoreOnTrigger = 0        	
+        	Verbosity = 2
+        	// Undefined, OpenTree is deferred, it is performed in response to a specific message sent by the ShotManager
+        	// this is necessary because we need a late opening to have simulink buses configured
+        	// the shotno is the parameter of the opening message
+        	//PulseNumber = -2
+        	PulseNumber = 0
+        	EventName = "updatejScope"
+        	TimeRefresh = 5
+        	NumberOfPreTriggers = 0
+			NumberOfPostTriggers = 0
+		
+			Signals = {
+
+//				Trigger 					= { Type = uint8 }	
+//			    Time    					= { Type = int32 TimeSignal = 1 TimeSignalMultiplier = 1e-6 }
+  
+				Thread2_CycleTime    		= { NodeName = "ST.CH21" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } 
+				GAMSimulink2_Time    		= { NodeName = "ST.CH22" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 3 SamplePhase = 0 } 				
+				StorageBroker2_Time        	= { NodeName = "ST.CH23" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 3 SamplePhase = 0 }				
+	
+				Counter 					= { NodeName = "ST.CH24" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 4 SamplePhase = 0 } 
+				realtime 					= { NodeName = "ST.CH25" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } 
+
+                testep 					    = { NodeName = "ST.CH30" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+				testeperr 					= { NodeName = "ST.CH31" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+                nestep 					    = { NodeName = "ST.CH32" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+				nesteperr 					= { NodeName = "ST.CH33" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+				
+        	}
+        	+TreeFlushedMsg = { Class = Message Destination = ShotManager Function = TreeFlushed Mode = ExpectsReply }
+        }                      
     }
+    
+    
     +States = {
         Class = ReferenceContainer
         +Run = {
@@ -377,6 +550,16 @@ $RTApp = {
 					  TimingSignalsBroker1
 					  //LoggerBroker
 					  StorageBroker1
+					  T1TSynch
+                    }                                
+                +Thread2 = {
+                    Class = RealTimeThread CPUs = 0x10 Functions = {
+                      T1T2Com
+                      Constants 
+					  SpectroRouter
+					  GAMSimulink2
+					  TimingSignalsBroker2
+					  StorageBroker2
                     }                                
                 }                
             }
