--- a/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
@@ -95,7 +95,7 @@
    +StopLLCMsg					   = { Class = Message Destination = RTApp.Data.ADCSystem  Function = StopLLC Mode = ExpectsReply }
    +StopCurrentStateExecutionMsg = { Class = Message Destination = RTApp     			Function = StopCurrentStateExecution Mode = ExpectsReply }
    +MdsFlushSegmentsMsg1         = { Class = Message Destination = RTApp.Data.MDSWriter1 Function = FlushSegments Mode = ExpectsReply }
-   //+MdsFlushSegmentsMsg2         = { Class = Message Destination = RTApp.Data.MDSWriter2 Function = FlushSegments Mode = ExpectsReply }
+   +MdsFlushSegmentsMsg2         = { Class = Message Destination = RTApp.Data.MDSWriter2 Function = FlushSegments Mode = ExpectsReply }
    +ShotManagerStopMsg 			 = { Class = Message Destination = ShotManager 			Function = Stop Mode = ExpectsReply }
   }
   +ABORT = {
@@ -153,6 +153,11 @@
    +ExitAppMsg = { Class = Message Destination = ShotManager     Function = Exit }   
   }
  }
+}
+
++MDSParameters = {
+ Class=MDSObjLoader
+ Shot=-1
 }
 
 $RTApp = {
@@ -231,16 +236,16 @@ $RTApp = {
         +T1T2Com = {
             Class = IOGAM
             InputSignals = {
-                Counter      = {                   DataSource = RTThreadSynch1  Type = int32 NumberOfElements = 4 }                
-                realtime     = {                   DataSource = RTThreadSynch1  Type = float32 Default = 0 }      
-                ADCuscounter = {                   DataSource = RTThreadSynch1  Type = uint32 NumberOfElements = 4 }
-                realadc      = {                   DataSource = RTThreadSynch1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }   
+                Counter      = {                   DataSource = RTThreadSynch1  Type = int32 NumberOfElements = 4 Samples = 1 }                
+                realtime     = {                   DataSource = RTThreadSynch1  Type = float32 Default = 0 Samples = 1}      
+                ADCuscounter = {                   DataSource = RTThreadSynch1  Type = uint32 NumberOfElements = 4 Samples = 1 }
+                realadc      = {                   DataSource = RTThreadSynch1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Samples = 1 }   
             }
             OutputSignals = {
-                Counter      = {                   DataSource = DDB2  Type = int32 NumberOfElements = 4 }                
-                realtime     = {                   DataSource = DDB2  Type = float32 Default = 0 }      
-                ADCuscounter = {                   DataSource = DDB2  Type = uint32 NumberOfElements = 4 }
-                realadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }               
+                Counter      = {                   DataSource = DDB2  Type = int32 NumberOfElements = 4 Samples = 1 }                
+                realtime     = {                   DataSource = DDB2  Type = float32 Default = 0 Samples = 1 }      
+                ADCuscounter = {                   DataSource = DDB2  Type = uint32 NumberOfElements = 4 Samples = 1 }
+                realadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Samples = 1 }               
             }      
         }	
         +Constants = {
@@ -249,6 +254,10 @@ $RTApp = {
 				it_dummy 	= { DataSource = DDB2 Type = int32  NumberOfElements = 1   NumberOfDimensions=1 }
 				time_dummy 	= { DataSource = DDB2 Type = float32  NumberOfElements = 1   NumberOfDimensions=1 }
 				data_dummy	= { DataSource = DDB2 Type = int16  NumberOfElements = 528   NumberOfDimensions=1 }				
+				testep_d	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				testeperr_d	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				nestep_d	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+				nesteperr_d	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
             }
         }
         +SpectroRouter = {
@@ -259,11 +268,13 @@ $RTApp = {
                 adc193      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
                 adc385      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
                 adc577      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{576,576}} Alias = realadc }   
-                data_dummy	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{4,527}} }	
+                data_dummy	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{5,527}} }	
 
+		Counter		    = { DataSource = DDB2 Type = int32  	NumberOfElements = 4 Ranges={{0,0}} NumberOfDimensions=1}
             }
             OutputSignals = {
-                routedadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 }
+                routedadc      = {                   DataSource = DDB2  Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 }
+                counter1      = {                   DataSource = DDB2  Type = int32 NumberOfElements = 1 NumberOfDimensions = 1 }
             }
         }
         +GAMSimulink2 = {
@@ -275,9 +286,9 @@ $RTApp = {
 			TunParSourceGAM = MDSParameters
 			SkipNotOkTunParams = 1
 			InputSignals = {		
-				it		    = { DataSource = DDB2 Type = int32  	NumberOfElements = 4 Ranges={{0,0}} NumberOfDimensions=1 Alias = Counter }
+				it		    = { DataSource = DDB2 Type = int32  	NumberOfElements = 1 NumberOfDimensions=1 Alias = counter1 }
 				time		= { DataSource = DDB2 Type = float32    NumberOfElements = 1                NumberOfDimensions=1 Alias = realtime }
-				data		= { DataSource = DDB2 Type = int16  	NumberOfElements = 528              NumberOfDimensions=1 }				
+				data		= { DataSource = DDB2 Type = int16  	NumberOfElements = 528              NumberOfDimensions=1 Alias = routedadc }				
  			}
  			OutputSignals = { 
 				testep	= { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
@@ -346,9 +357,13 @@ $RTApp = {
             realtime         			    = { DataSource = DDB2 Type = float32 Default = 0 }      
          
             testep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            //testep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 Alias = testep_d }		
             testeperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            //testeperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 Alias = testeperr_d }		
             nestep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }		
+            //nestep	                        = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 Alias = nestep_d }		
             nesteperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 }				
+            //nesteperr	                    = { DataSource = DDB2 Type = float32  NumberOfElements = 109   NumberOfDimensions=1 Alias = nesteperr_d }				
          
          	Thread2_CycleTime    			= { DataSource = DDB2 Type = uint32 Default = 0 }     
 	        GAMSimulink2_Time    			= { DataSource = DDB2 Type = uint32 NumberOfElements = 3 } 	        
@@ -372,17 +387,20 @@ $RTApp = {
 		+LoggerBroker = {
 		 Class = IOGAM
 		 InputSignals = {
-                Counter      = {                   DataSource = DDB1  Type = int32 NumberOfElements = 4 }                
-                Time         = {                   DataSource = DDB1  Type = int32 }      
-                ADCuscounter = {                   DataSource = DDB1  Type = uint32 NumberOfElements = 4 }
-                realadc      = {                   DataSource = DDB1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges = {{0,0}} }   
+                //Counter      = {                   DataSource = DDB1  Type = int32 NumberOfElements = 4 }                
+                //Time         = {                   DataSource = DDB1  Type = int32 }      
+                //ADCuscounter = {                   DataSource = DDB1  Type = uint32 NumberOfElements = 4 }
+                //realadc      = {                   DataSource = DDB1  Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges = {{0,0}} }   
+                realtime      = {                   DataSource = DDB2  Type = float32 NumberOfElements = 1 NumberOfDimensions = 1 }   
+                //realtime      = {                   DataSource = DDB1  Type = float32 NumberOfElements = 1 NumberOfDimensions = 1 }   
 		 }
 		 OutputSignals =
 		 {
-		    Counter 	 = 	{ DataSource = LoggerDataSource Type = int32 NumberOfElements = 4 }
-		    Time    	 = 	{ DataSource = LoggerDataSource Type = int32 }
-            ADCuscounter =  { DataSource = LoggerDataSource Type = uint32 NumberOfElements = 4 }
-            adc1      =  { DataSource = LoggerDataSource Type = int16 NumberOfElements = 1  }   
+		    //Counter 	 = 	{ DataSource = LoggerDataSource Type = int32 NumberOfElements = 4 }
+		    //Time    	 = 	{ DataSource = LoggerDataSource Type = int32 }
+            //ADCuscounter =  { DataSource = LoggerDataSource Type = uint32 NumberOfElements = 4 }
+            //adc1      =  { DataSource = LoggerDataSource Type = int16 NumberOfElements = 1  }   
+           realtime      =  { DataSource = LoggerDataSource Type = float32 NumberOfElements = 1  }   
 		 }
 		} 
 		
@@ -400,7 +418,7 @@ $RTApp = {
 			// TODO: IndependentThread isn't working, thread semaphore not handled by Execute, to be fixed
 			ExecutionMode = RealTimeThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.
 		    //ExecutionMode = IndependentThread //Optional. If not set ExecutionMode = IndependentThread. If ExecutionMode == IndependentThread a thread is spawned to generate the time events. ExecutionMode == RealTimeThread the time is generated in the context of the real-time thread.			
-			CPUMask = 0x04 //Optional and only relevant if ExecutionMode=IndependentThread
+			CPUMask = 0x08 //Optional and only relevant if ExecutionMode=IndependentThread
      		Cycles = 1000
      		//Cycles = 440
      		StartTimeUsec = -2205000
@@ -526,10 +544,10 @@ $RTApp = {
 				Counter 					= { NodeName = "ST.CH24" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 4 SamplePhase = 0 } 
 				realtime 					= { NodeName = "ST.CH25" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 1 SamplePhase = 0 } 
 
-                testep 					    = { NodeName = "ST.CH30" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
-				testeperr 					= { NodeName = "ST.CH31" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
-                nestep 					    = { NodeName = "ST.CH32" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
-				nesteperr 					= { NodeName = "ST.CH33" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+                testep 					    = { NodeName = "ST.CH28" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+				testeperr 					= { NodeName = "ST.CH29" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+                nestep 					    = { NodeName = "ST.CH30" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
+				nesteperr 					= { NodeName = "ST.CH31" 	 	 Period = 1  MakeSegmentAfterNWrites = 600000 AutomaticSegmentation = 0 NumberOfElements = 109 SamplePhase = 0 } 
 				
         	}
         	+TreeFlushedMsg = { Class = Message Destination = ShotManager Function = TreeFlushed Mode = ExpectsReply }
@@ -551,12 +569,14 @@ $RTApp = {
 					  //LoggerBroker
 					  StorageBroker1
 					  T1TSynch
-                    }                                
+                    }
+                }                                
                 +Thread2 = {
                     Class = RealTimeThread CPUs = 0x10 Functions = {
                       T1T2Com
                       Constants 
 					  SpectroRouter
+					  //LoggerBroker
 					  GAMSimulink2
 					  TimingSignalsBroker2
 					  StorageBroker2
@@ -564,8 +584,7 @@ $RTApp = {
                 }                
             }
         }
-                
-    }
+    }          
     +Scheduler = {
         Class = GAMScheduler
         TimingDataSource = Timings
