spectro 152 correctly processed in rt

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
@@ -263,12 +263,28 @@ $RTApp = {
         +SpectroRouter = {
             Class = IOGAM
             InputSignals = {
-                adc1      					    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
-                adc2							= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{1,1}}     Alias = realadc }   
-                adc193      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
-                adc385      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
+                
+
+
+               	data_dummy_1	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,281}} Alias = data_dummy }	
+
+		// input 283 is LASER power monitor	
+
+		adc1      					    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
+                
+
+               	data_dummy_2	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,174}} Alias = data_dummy }	
+
+		// spectro 152 at 459..462
+
                 adc577      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{576,576}} Alias = realadc }   
-                data_dummy	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{5,527}} }	
+                adc385      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{384,384}} Alias = realadc }   
+		adc193      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{192,192}} Alias = realadc }   
+                adc2							= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{1,1}}     Alias = realadc }   
+                
+		data_dummy_3	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,65}} Alias = data_dummy }	
+
+		// 1 st DTACQ sample counter
 
 		Counter		    = { DataSource = DDB2 Type = int32  	NumberOfElements = 4 Ranges={{0,0}} NumberOfDimensions=1}
             }
