before swapping to enumtest branch

--- a/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
+++ b/Docs/User/source/_static/examples/Configurations/RTThomson-2threads.cfg
@@ -27,6 +27,43 @@
  Changelog:
  
  - 17.07.20 CG first written from tcvrt03-1005-FPS
+
+Beckhoff based signal generation wirings:
+
+TCV MDS+ SOURCE			BECKHOFF DAC	DTACQ ADC
+
+laser power
+\dt196_thom_003:channel_091:raw 1		1-1 (1)
+
+spectro 152
+\dt196_thom_005:channel_075:raw 2		4-1 (577)
+\dt196_thom_005:channel_076:raw 3		3-1 (385)
+\dt196_thom_005:channel_077:raw 4		2-1 (193)
+\dt196_thom_005:channel_078:raw 5		1-2 (2)
+
+spectro 151
+\dt196_thom_005:channel_070:raw 6		2-2 (194)
+\dt196_thom_005:channel_071:raw 7		2-3 (195)
+\dt196_thom_005:channel_072:raw 8		2-4 (196)
+\dt196_thom_005:channel_073:raw 9		2-5 (197)
+
+free
+				10		2-6 (198)		
+				11		2-7 (199)	
+				12		2-8 (200)
+
+Test shot procedure:
+1) /root/MARTe2-examples/runmartethomson.sh
+2) /root/scd/commands/sendRUN
+3) /root/scd/commands/thtriggermds.py or /root/scd/commands/thtrigger.py
+4) /root/scd/commands/sendRUNCOMPLETE.py
+5) /root/scd/commands/sendEXIT
+
+To load Beckhoff signal generator from MDS:
+ssh tcv_oper@tcvdata
+python loadthomsonrtdata.py
+
+
 */
 
 +ShotManager = {
@@ -36,7 +73,8 @@
  Shot = 1
  Statusnode = ST.CH20
  InitScript = "/root/scd/commands/llc-run-thomson-setup" // script called upon entering init (for TS sets up SOD ADC systems, 
- ExitScript = "/root/scd/commands/llc-run-thomson-abort" // script called upon exiting (for TS aborts the transient acquisition on ADCs, llc-run-thomson-abort, same also for AbortScript in this case)
+ //ExitScript = "/root/scd/commands/llc-run-thomson-abort" // script called upon exiting (for TS aborts the transient acquisition on ADCs, llc-run-thomson-abort, same also for AbortScript in this case), not needed anymore since D-TACQ now auto terminates the transient properly on a timeout basis
+ ExitScript = "/root/cpupowersave.sh"
  AbortScript = "/root/scd/commands/llc-run-thomson-abort" 
 
 // The parameter param1 is the shotnumber to be opened 
@@ -273,7 +311,18 @@ $RTApp = {
 		adc1      					    = { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{0,0}}     Alias = realadc }   
                 
 
-               	data_dummy_2	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,174}} Alias = data_dummy }	
+               	//data_dummy_2	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,174}} Alias = data_dummy }	
+               data_dummy_2	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,169}} Alias = data_dummy }	
+
+		// spectro 151 at 454..457
+
+		adc194      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{193,193}} Alias = realadc }   
+		adc195      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{194,194}} Alias = realadc }   
+		adc196      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{195,195}} Alias = realadc }   
+		adc197      					= { DataSource = DDB2 Type = int16 NumberOfElements = 768 NumberOfDimensions = 1 Ranges ={{196,196}} Alias = realadc }   
+
+
+               data_dummy_5	                    = { DataSource = DDB2 Type = int16 NumberOfElements = 528 NumberOfDimensions = 1 Ranges ={{0,0}} Alias = data_dummy }	
 
 		// spectro 152 at 459..462
 
@@ -437,6 +486,7 @@ $RTApp = {
 			CPUMask = 0x08 //Optional and only relevant if ExecutionMode=IndependentThread
      		Cycles = 1000
      		//Cycles = 440
+     		//Cycles = 10
      		StartTimeUsec = -2205000
      		//StartTimeUsec = 0
      		// Frequency = 50000
