MDSParEnum tested ok on node09
- fetching 2 enums from spcpc171
 martetest shot 1

--- a/Docs/User/source/_static/examples/Configurations/SimulinkWrapperTester.cfg
+++ b/Docs/User/source/_static/examples/Configurations/SimulinkWrapperTester.cfg
@@ -7,6 +7,15 @@
   Server=tcvdata.epfl.ch
   Tree=tcv_shot
   +SCDnode02_tp-ADCgains-RVLOOP_gains                 = { Class=MDSParVector                   Path="mag_live_gains('RVLOOP','GAIN')"        }
+  //+testenum                 			      = { Class=MDSParEnum                     Path="" EnumCode = {0,1,2,3} EnumVal = {"ZHHFS","ZHLFS"}        }
+//+testenum                 			      = { Class=MDSParEnum                     Path="" EnumCode = {0,1,2,3} EnumVal = {"ZHHFS","ZHLFS","Z0HFS","Z0LFS"}        }
+ }
+ +Connection_spcpc171 = {
+  Class=MDSObjConnection
+  Server=spcpc171.epfl.ch
+  Tree=martetest
+  Shot=1
+  +testenum                 			      = { Class=MDSParEnum                     Path="ENUM1" EnumCode = {0,1,2,3} EnumVal = {"ZHHFS","ZHLFS","Z0HFS","Z0LFS"}        }
  }
 }
 
